Fix z-index issue

--- a/frontend/client/src/features/layouts/child-layouts/child-layout-2/child-layout-2.module.css
+++ b/frontend/client/src/features/layouts/child-layouts/child-layout-2/child-layout-2.module.css
@@ -29,6 +29,7 @@
 .child-layout-2__body {
   overflow: hidden;
   position: relative;
+  z-index: calc(var(--zindex-fixed) + 1);
 
   border-radius: var(--border_radius_xxl);
 
